// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`write-categories one category, no page should write a category/readme.md file using the category template 1`] = `
"# Category

<img src=\\"./category-category.png\\" alt=\\"A screenshot of the Category\\" width=\\"740\\" height=\\"80\\"
  style=\\"height: auto\\" />

> Category description.

"
`;

exports[`write-categories one category, one page should write a category/readme.md file using the category template 1`] = `
"# Category

> Category description.

- [Page](category/page)
"
`;

exports[`write-categories one category, two pages should write a category/readme.md file using the category template 1`] = `
"# Category

> Category description.

- [Page 1](category/page1)
- [Page 2](category/page2)
"
`;

exports[`write-categories two categories, one page in each should write a category1/readme.md file using the category template 1`] = `
"# Category 1

> Category 1 description.

- [Page](category1/page)
"
`;

exports[`write-categories two categories, one page in each should write a category2/readme.md file using the category template 1`] = `
"# Category 2

> Category 2 description.

- [Page](category2/page)
"
`;
